<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:background="#00FFFFFF"
            android:rotationY="180"
            android:src="@drawable/cart"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="serif-monospace"
        android:text="@string/shop_id"
        android:textColor="@color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/shopId"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/enterfield"
        android:ems="10"
        android:hint="@string/enter_shop_id"
        android:inputType="phone"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/cart_id"
        android:textColor="@color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/enterfield"
        android:ems="10"
        android:layout_marginStart="85dp"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_cart_id"
        android:textColor="@color/black"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737"
        android:layout_marginLeft="70dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/login"
        android:layout_width="145dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textSize="20sp"
        app:backgroundTint="#153951"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236"
        app:rippleColor="#FFFFFF" />

</LinearLayout>